# gestao-fazenda

./: .gitignore  README.md  check.sh  griselda-375011-cloud-vision.json  old_requirements.txt  pyproject.toml  rebanho.csv  requirements-extract.txt  tests.py
.github/workflows/: pylint.yml
config/: settings.py  urls.py
fazenda/: admin.py  apps.py  choices.py  forms.py  labeller_urls.py  models.py  tasks.py  urls.py  views.py  views.py.f0de255600aab19c1c125905b3a2d4ca.tmp  widgets.py
fazenda/migrations/: 0001_initial.py  0002_alter_fichaordenha_foto_original.py  0002_fotoordenha_peso_balde.py  0002_remove_fotoordenha_ficha_remove_ordenha_ficha_and_more.py  0002_remove_fotoordenha_points_fotoordenha_labels.py  0003_alter_ordenha_numero_alter_vaca_numero.py  0003_fichaordenha_data_alter_fichaordenha_foto_original.py  0003_ordenha_foto.py  0003_remove_fotoordenha_labels_imagewithlabels.py  0004_alter_vaca_prefixo.py  0004_fotoordenha_labels_delete_imagewithlabels.py  0004_rename_fotos_fotoordenha_foto.py  0005_alter_fotoordenha_labels.py  0005_ordenha_prefixo.py  0005_rename_foto_fotoordenha_image.py  0006_alter_fichaordenha_data.py  0006_labels_alter_fotoordenha_labels.py  0006_rebanho.py  0007_remove_fotoordenha_lines_alter_fotoordenha_labels.py  0007_remove_ordenha_prefixo.py  0007_rename_foto_bbox_fichaordenha_bbox_and_more.py  0008_alter_vaca_unique_together.py  0008_ordenha_prefixo.py  0008_remove_fichaordenha_bbox_remove_fichaordenha_linhas_and_more.py  0009_ordenha_nome_ordenha_numero.py  (+20 more)
utils/: dataframe.py  geometry.py  import_vacas.py  importar_vacas.py
(+11 files in other folders)
