[tool.poetry]
name = "gestao-fazenda"
version = "0.1.0"
description = ""
authors = ["Arthur <arthurnalves@proton.me>"]
readme = "README.md"
packages = [{include = "gestao_fazenda"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
