[tool.poetry]
name = "gestao-fazenda"
version = "0.1.0"
description = ""
authors = ["Arthur <arthurnalves@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
easy-thumbnails = "^2.8.5"
django-labeller = "^0.3.2"
django-jazzmin = "^2.6.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
google-cloud-vision = "^3.4.5"
unidecode = "^1.3.7"
python-levenshtein = "^0.23.0"
pandas = "^2.1.3"
celery = "^5.3.6"
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
